# gwa

./: .gitignore  CMakeLists.txt
include/SDL2/: README
lib/SDL2/: README
res/: data1.txt  data2.txt  font_small.font  font_tiny.font  lvl_test.tile  lvl_test2.tile  test.tileset  test2.tileset
res/font/: font_01.csv  font_01.font  font_12pt.csv  font_12pt.font
src/: main.cpp
src/ctx/: ctx.cpp  ctx.h  fdecl.h
src/editor/: editor.cpp  editor.h
src/entity/: entity.cpp  entity.h  entity_serialize.cpp  entity_test.hpp  typedef.h
src/entity/component/: EVERYTHING.h  body.h  collider.cpp  collider.h  item.cpp  item.h  physics.cpp  physics.h  player.cpp  player.h  spr.cpp  spr.h  transform.h
src/gui/: gui.cpp  gui.h
src/platform/: font.cpp  font.h  input.cpp  input.h  rendagent.cpp  rendagent.h  video.cpp  video.h
src/resource/: fwdecl.h  res_mng.cpp  res_mng.h
src/tile/: fdecl.h  tile.cpp  tile.h  tile_serialize.cpp
src/util/file/: futil.cpp  futil.h
src/util/fixed/: fp.cpp  fp.h  fp_test.hpp
src/util/geometry/: bbox.cpp  bbox.h  vec2.cpp  vec2.h
src/util/json/: README.md  iserializable.h  obj_archive.cpp  obj_archive.h  obj_archive_exception.cpp  obj_archive_exception.h  obj_archive_test.hpp
src/util/richtext/: richtext.cpp  richtext.h  richtext_test.hpp
src/util/string/: string2.cpp  string2.h  string2_test.h  string2_test.hpp
src/util/test/: README.md  test2.cpp  test2.h
